--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
 
         <h2>Working Together</h2>
-        <p>Reach out to discuss your project. We can schedule a call or correspond over email to determine scope and fit. Rates are flexible depending on project requirements.</p>
+        <p>Hit me up on Teams :)</p>
 
         <div class="contact-section">
             <h2>Contact</h2>
