--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
 
         <h2>Working Together</h2>
-        <p>Hit me up on Teams :)</p>
+        <p>Email: maurierc@oregonstate.edu</p>
 
         <div class="contact-section">
             <h2>Contact</h2>
