--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
         <div class="contact-section">
             <h2>Contact</h2>
             <ul class="contact-links">
-                <li>📧 Email: <a href="mailto:maurierc@oregonstate.edu">maurierc@oregonstate.edu</a></li>
-                <li>💼 LinkedIn: <a href="https://linkedin.com/in/maurierc">linkedin.com/in/maurierc</a></li>
-                <li>💻 GitHub: <a href="https://github.com/colin-maurier">github.com/colin-maurier</a></li>
+                <li>Email: <a href="mailto:maurierc@oregonstate.edu">maurierc@oregonstate.edu</a></li>
+                <li>LinkedIn: <a href="https://linkedin.com/in/maurierc">linkedin.com/in/maurierc</a></li>
+                <li>GitHub: <a href="https://github.com/colin-maurier">github.com/colin-maurier</a></li>
             </ul>
         </div>
     </main>
